Replaced sambamba with samtools due to an incompatibility

--- a/envs/bwa_picard_samtools.yaml
+++ b/envs/bwa_picard_samtools.yaml
@@ -1,4 +1,4 @@
-name: bwa_picard_samtools_sambamba
+name: bwa_picard_samtools
 channels:
   - bioconda
   - r
@@ -8,7 +8,6 @@ dependencies:
   - bwa=0.7.17=ha92aebf_3
   - htslib=1.9=hc238db4_4
   - picard=2.18.21=0
-  - sambamba=0.7.1
   - samtools=1.9=h8ee4bcc_1
   - python=3.6.6=h5001a0f_3
   - numpy-base=1.15.4=py36hde5b4d6_0
