--- a/envs/myenv.yaml
+++ b/envs/myenv.yaml
@@ -6,7 +6,7 @@ channels:
 dependencies:
  - r=3.3.1
  - bioconductor-biostrings=2.42.1
- - star=2.5.2a
+ - star=2.7.2d
  - picard=2.18.7
  #- samtools=1.3
  - stringtie=1.3.4
@@ -19,3 +19,4 @@ dependencies:
  - ucsc-liftover=377
  - samtools=1.9
  - dfam
+ - fastp
