--- a/envs/myenv.yaml
+++ b/envs/myenv.yaml
@@ -6,8 +6,7 @@ channels:
 dependencies:
  - r=3.3.1
  - bioconductor-biostrings=2.42.1
- - star=2.7.2d
- - picard=2.18.7
+ - star=2.7.3a
  #- samtools=1.3
  - stringtie=1.3.4
  - transdecoder=5.5.0
@@ -20,3 +19,4 @@ dependencies:
  - samtools=1.9
  - dfam
  - fastp
+ - picard=2.18.21
