-Added novel peptide analysis module -Updated MaxQuant params conversion module to allow for multiple protease/parameter groups -Refactored variant calling module to allow for calling of somatic variants on nonmatched samples

--- a/envs/myenv.yaml
+++ b/envs/myenv.yaml
@@ -18,5 +18,7 @@ dependencies:
  - ucsc-liftover=377
  - samtools=1.9
  - dfam
- - fastp
+ #- fastp
  - picard=2.18.21
+ #- snpeff=4.3.1t
+ - snpeff=4.5covid19
